--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
     environment: 
       - PGUSER=futureproof
       - PGHOST=db
-      - PGPASSWORD=pokepass
-      - PGDATABASE=pokemon
+      - PGPASSWORD=doggospass
+      - PGDATABASE=doggos
       - PGPORT=5432
     depends_on:
       - db
@@ -25,8 +25,8 @@ services:
       - "dbdata:/var/lib/postgresql/data"
       - "./db:/docker-entrypoint-initdb.d/:ro"
     environment: 
-      - POSTGRES_DB=pokes
+      - POSTGRES_DB=doggos
       - POSTGRES_USER=futureproof
-      - POSTGRES_PASSWORD=pokespass
+      - POSTGRES_PASSWORD=doggospass
 volumes:
   dbdata:
